# LibraryManagementSystemAPI

./: .coverage  manage.py  postman.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
libraries_database/: fields.py  filters.py  models.py  serializers.py  urls.py  views.py
libraries_database/migrations/: 0001_initial.py
libraries_database/tests/: conftest.py  factories.py  test_models.py  test_serializers.py  test_views.py
library_management_system/: urls.py
library_management_system/settings/: base.py  testing.py
